# CPU-SM5A-cpp

./: .gitignore  CMakeLists.txt  README.md
exe/: cpp_app
rom/: p.gw
rom/utils/: howto.md
src/: main.cpp
src/cpu/: sm500.h  sm500core.cpp  sm500op.cpp  sm510.h  sm510base.cpp  sm510core.cpp  sm510op.cpp  sm511core.cpp  sm5acore.cpp
src/data/: o.h
src/gw/: gw_def.h  gw_graphic.cpp  gw_graphic.h  gw_romloader.cpp  gw_romloader.h  gw_system.cpp  gw_system.h
